--- a/style.css
+++ b/style.css
@@ -41,14 +41,17 @@ body{
 }
 
 .box {
-    height: 100px;
-    width: 200px;
+    height: auto;
+    width: 400px;
     background-color: aliceblue;
     border-radius: 10px;
     display: flex;
-    margin-top: 50px;
+    margin-top: 400px;
     align-items: center;
     justify-content: center;
+    font-family: 'Handjet', cursive;
+    font-size: 50px;
+    color: #746c73;
 
 }
 
@@ -65,11 +68,11 @@ body{
     padding-top: 0px;
 
    margin: 0px;
-    
-
 }
 
-
+.box-font{
+    font-family: 'Handjet', cursive;
+}
 
 
 
